[workspace]
members = ["burrow", "burrow_derive"]
resolver = "2"

[workspace.package]
description = "Easily turn borrowed type into owned values"
documentation = "https://docs.rs/burrow"
license = "MIT OR Apache-2.0"
repository = "https://github.com/adsnaider/burrow"
readme = "README.md"
categories = ["rust-patterns"]
authors = ["Adam Snaider <adsnaider@gmail.com>"]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
burrow = { path = "burrow", version = "0.1.0" }
burrow_derive = { path = "burrow_derive", version = "0.1.0" }
