[workspace]
members = ["ownit", "ownit-derive"]
resolver = "2"

[workspace.package]
description = "Easily turn borrowed type into owned values"
documentation = "https://docs.rs/ownit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/adsnaider/ownit"
readme = "README.md"
categories = ["rust-patterns"]
authors = ["Adam Snaider <adsnaider@gmail.com>"]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
ownit = { path = "ownit", version = "0.0.0" }
ownit-derive = { path = "ownit-derive", version = "0.0.0" }
