[package]
name = "ownit-derive"
description.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.87"
