[package]
name = "ownit"
description.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true


[dependencies]
ownit-derive = { workspace = true, optional = true }

[features]
default = ["derive"]
derive = ["dep:ownit-derive"]
